kubeflow/apps/profiles/upstream/overlays/kubeflow/service.yaml
apiVersion: v1
kind: Service
metadata: # kpt-merge: /profiles-kfam
  name: profiles-kfam
  annotations:
    internal.kpt.dev/upstream-identifier: '|Service|default|profiles-kfam'
spec:
  ports:
    - port: 8081
