kubeflow/apps/profiles/upstream/overlays/kubeflow/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata: # kpt-merge: /profiles-kfam
  name: profiles-kfam
  annotations:
    internal.kpt.dev/upstream-identifier: 'networking.istio.io|VirtualService|default|profiles-kfam'
spec:
  gateways:
  - kubeflow-gateway
  hosts:
  - '*'
  http:
  - headers:
      request:
        add:
          x-forwarded-prefix: /kfam
    match:
    - uri:
        prefix: /kfam/
    rewrite:
      uri: /kfam/
    route:
    - destination:
        host: profiles-kfam.$(PROFILES_NAMESPACE).svc.cluster.local
        port:
          number: 8081
