kubeflow/apps/profiles/upstream/overlays/kubeflow/authorizationpolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata: # kpt-merge: /profiles-kfam
  name: profiles-kfam
  annotations:
    internal.kpt.dev/upstream-identifier: 'security.istio.io|AuthorizationPolicy|default|profiles-kfam'
spec:
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/kubeflow/sa/centraldashboard
  selector:
    matchLabels:
      kustomize.component: profiles
